--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://anchorwebco.com.au \
+          aws s3 sync . s3://anchorweb.co \
             --exclude ".git/*" \
             --exclude ".github/*" \
             --exclude "README.md" \
